Fix text-placeholder contrast

--- a/less/themes.less
+++ b/less/themes.less
@@ -63,7 +63,7 @@
 	--border-disabled: @gray-10;
 	--text-primary: @gray-100;
 	--text-secondary: @gray-70;
-	--text-placeholder: @gray-40;
+	--text-placeholder: @gray-60;
 	--text-helper: @gray-60;
 	--text-error: @red-60;
 	--text-inverse: @white;
@@ -198,7 +198,7 @@
 	--border-disabled: @gray-10;
 	--text-primary: @gray-100;
 	--text-secondary: @gray-70;
-	--text-placeholder: @gray-40;
+	--text-placeholder: @gray-60;
 	--text-helper: @gray-60;
 	--text-error: @red-60;
 	--text-inverse: @white;
@@ -333,7 +333,7 @@
 	--border-disabled: @gray-90;
 	--text-primary: @gray-10;
 	--text-secondary: @gray-30;
-	--text-placeholder: @gray-60;
+	--text-placeholder: @gray-50;
 	--text-helper: @gray-40;
 	--text-error: @red-30;
 	--text-inverse: @gray-100;
@@ -468,7 +468,7 @@
 	--border-disabled: @gray-90;
 	--text-primary: @gray-10;
 	--text-secondary: @gray-30;
-	--text-placeholder: @gray-60;
+	--text-placeholder: @gray-50;
 	--text-helper: @gray-40;
 	--text-error: @red-30;
 	--text-inverse: @gray-100;
